examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx
// error[E300]: Return Type Mismatch
//
// The body of this function does not match its return type.
//
//   examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx:46:14
//    |
// 46 |     let _f = if true {
//    |              ^^^^^^^^^
// 47 |         ret_int
//    | ^^^^^^^^^^^^^^^
//    |         ------- this branch established the expected type
// 48 |     } else {
//    | ^^^^^^^^^^^^
// 49 |         ret_string
//    | ^^^^^^^^^^^^^^^^^^
//    |         ---------- this branch conflicts with that type
// 50 |     }
//    | ^^^^^
//
// Note:
//   declared return type: Int
//   body type: String
//   the `then` branch fixes the type expected from the whole `if`
//   the `else` branch produces the competing type
//
// Help:
//   Change the return annotation to `-> String` or change the body.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// E300: function-type return mismatch should report return-specific diagnostics.
fn ret_int() -> Int {
    1
}

fn ret_string() -> String {
    "x"
}

fn main() -> Unit {
    let _f = if true {
        ret_int
    } else {
        ret_string
    }
}
